[gd_scene load_steps=3 format=3 uid="uid://b8x7lam2n4p5q"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1_hud"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0, 0, 0, 0.7)

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_hud")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 1
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="LeftContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="HeartsContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/LeftContainer"]
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="MarginContainer/HBoxContainer/LeftContainer"]
layout_mode = 2
text = "Score: 0"
horizontal_alignment = 0

[node name="Spacer" type="Control" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PauseButton" type="Button" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Pause"

[node name="GameoverPopup" type="Panel" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="VBoxContainer" type="VBoxContainer" parent="GameoverPopup"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameoverLabel" type="Label" parent="GameoverPopup/VBoxContainer"]
layout_mode = 2
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartButton" type="Button" parent="GameoverPopup/VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="QuitButton" type="Button" parent="GameoverPopup/VBoxContainer"]
layout_mode = 2
text = "Quit"

